--- a/PC Side App/ArduHomeProj/ArduHomeProj.vbproj
+++ b/PC Side App/ArduHomeProj/ArduHomeProj.vbproj
@@ -78,6 +78,7 @@
     <Compile Include="fade.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GlobalVariables.vb" />
     <Compile Include="Start.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -162,69 +163,6 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp10.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp11.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp12.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp13.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp14.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp15.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp16.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp17.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp18.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp19.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp20.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp21.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp22.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp23.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp24.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp25.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp26.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp27.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp28.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp29.wav" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\temp30.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
